--- a/Our-Team.html
+++ b/Our-Team.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md  fixed-top mb-5">
+    <nav class="navbar navbar-expand-md mb-5">
       <div class="container">
         <a class="navbar-brand" href="index.html"><img class="img-fluid" src="homepageimages/vmart_store-logo.png"
             alt="" width="130px" height="200px"></a>
@@ -151,7 +151,7 @@
   <style>
     .top-fixed-section {
       color: white;
-      background: url(./img/clients\ bg.jpg);
+      background: url(homepageimages/Group\ 48095504\ footer-bg.svg);
       padding: 50px 0px 50px;
       background-repeat: no-repeat;
       background-size: cover;
@@ -283,100 +283,6 @@
         </div>
       </section>
     </section>
-
-    <style>
-      .tablink {
-        background-color: #555;
-        color: white;
-        float: left;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        padding: 14px 16px;
-        font-size: 17px;
-        width: 25%;
-      }
-
-      .tablink:hover {
-        background-color: #777;
-      }
-
-      .tabcontent {
-        color: white;
-        display: none;
-        padding: 50px;
-        text-align: center;
-      }
-
-      #London {
-        background-color: red;
-      }
-
-      #Paris {
-        background-color: green;
-      }
-
-      #Tokyo {
-        background-color: blue;
-      }
-
-      #Oslo {
-        background-color: orange;
-      }
-    </style>
-
-
-    <p>Click on the buttons inside the tabbed menu:</p>
-
-    <div id="London" class="tabcontent">
-      <h1>London</h1>
-      <p>London is the capital city of England.</p>
-    </div>
-
-    <div id="Paris" class="tabcontent">
-      <h1>Paris</h1>
-      <p>Paris is the capital of France.</p>
-    </div>
-
-    <div id="Tokyo" class="tabcontent">
-      <h1>Tokyo</h1>
-      <p>Tokyo is the capital of Japan.</p>
-    </div>
-
-    <div id="Oslo" class="tabcontent">
-      <h1>Oslo</h1>
-      <p>Oslo is the capital of Norway.</p>
-    </div>
-
-    <button class="tablink" onclick="openCity('London', this, 'red')" id="defaultOpen">London</button>
-    <button class="tablink" onclick="openCity('Paris', this, 'green')">Paris</button>
-    <button class="tablink" onclick="openCity('Tokyo', this, 'blue')">Tokyo</button>
-    <button class="tablink" onclick="openCity('Oslo', this, 'orange')">Oslo</button>
-
-    <script>
-      function openCity(cityName, elmnt, color) {
-        var i, tabcontent, tablinks;
-        tabcontent = document.getElementsByClassName("tabcontent");
-        for (i = 0; i < tabcontent.length; i++) {
-          tabcontent[i].style.display = "none";
-        }
-        tablinks = document.getElementsByClassName("tablink");
-        for (i = 0; i < tablinks.length; i++) {
-          tablinks[i].style.backgroundColor = "";
-        }
-        document.getElementById(cityName).style.display = "block";
-        elmnt.style.backgroundColor = color;
-
-      }
-      // Get the element with id="defaultOpen" and click on it
-      document.getElementById("defaultOpen").click();
-    </script>
-
-
-
-
-
-
   </main>
 
 
