--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vmart</title>
-  <link rel="icon"  href="homepageimages/brand2.jpg">
+  <link rel="icon" href="homepageimages/brand2.jpg">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -61,8 +61,8 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Daily Deals
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -116,23 +116,27 @@
               </ul>
             </li>
           </ul>
-          <div class="d-flex">
+
+          <div class="d-flex m-auto">
             <input class="form-control" list="datalistOptions" placeholder="Search, Brand,Product....">
             <a href="" class="btn"><i class="fa-solid fa-magnifying-glass text-white"></i></a>
           </div>
+
           <ul class="navbar-nav nav-brand-icons">
             <li class="nav-item">
-              <a href="profile.html"><i class="fa-solid fa-user  p-2"></i>
+              <a href="profile.html"><i class="fa-solid fa-user p-2"></i>
               </a>
             </li>
             <li class="nav-item">
-              <a href=""><i class="fa-solid fa-cart-shopping p-2 "></i>
+              <a href=""><i class="fa-solid fa-cart-shopping p-2"></i>
               </a>
             </li>
+
             <li class="login-btn mx-1">
               <a href=""><a href="" class="btn">Login</a>
               </a>
             </li>
+
           </ul>
         </div>
       </div>
@@ -198,9 +202,26 @@
       <section class="">
         <div class="container-fluid p-0">
           <div class="payment-banner-top-img container mb-3">
-            <img class="img-fluid m-auto d-block " src="homepageimages/whatch add1 container-fluid.webp" alt="">
+            <img class="img-fluid m-auto d-block " src="img/395cbdc769cbbc96a8d123a5f1f16e80.jpg" alt="">
           </div>
         </div>
+      </section>
+
+      <section>
+        <div class="container">
+          <div class="owl-carousel owl-theme">
+            <div class="item">
+              <img src="homepageimages/9604469.jpg" alt="">
+            </div>
+            <div class="item">
+              <img src="homepageimages/5092428.jpg" alt="">
+            </div>
+            <div class="item">
+              <img src="/homepageimages/8460965.jpg" alt="">
+            </div>
+          </div>
+        </div>
+
       </section>
 
       <!-- Limited-offers-section -->
@@ -249,7 +270,7 @@
                 <img class="img-fluid" src="homepageimages/sale20.jpg" alt="" width="100%">
               </div>
               <div class="home-leftside-wrapper">
-                <div class="card border-0 mb-2" data-aos="fade-right" data-aos-offset="300"
+                <div class="card border-0 mb-3" data-aos="fade-right" data-aos-offset="300"
                   data-aos-easing="ease-in-sine">
                   <div class="row g-0 align-items-center">
                     <div class="col-3 text-center">
@@ -274,7 +295,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card border-0 mb-2" data-aos="fade-right" data-aos-offset="300"
+                <div class="card border-0 mb-3" data-aos="fade-right" data-aos-offset="300"
                   data-aos-easing="ease-in-sine">
                   <div class="row g-0 align-items-center">
                     <div class="col-3 text-center">
@@ -299,7 +320,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card border-0 mb-2" data-aos="fade-down">
+                <div class="card border-0 mb-3" data-aos="fade-down">
                   <div class="row g-0 align-items-center">
                     <div class="col-3 text-center">
                       <a target="_blank" href="">
@@ -323,7 +344,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="card border-0 ">
+                <div class="card border-0 mb-3">
                   <div class="row g-0 align-items-center">
                     <div class="col-3 text-center">
                       <a target="_blank" href="">
@@ -348,8 +369,43 @@
                   </div>
                 </div>
                 <div>
-                  <img class="img-fluid" src="homepageimages/summer sale.jpg" alt="" width="100%">
+                  <img class="img-fluid mb-3" src="homepageimages/summer sale.jpg" alt="">
                 </div>
+                <div class="mb-3">
+                  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                        class="active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="homepageimages/abx discount images girs.jpg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="homepageimages/sal google.jpeg" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="homepageimages/lef-salw.jpg" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                      data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                      data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+                </div>
+
+
                 <div>
                   <img class="img-fluid" src="homepageimages/bata.png" alt="" width="100%">
                 </div>
@@ -835,6 +891,21 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                  <div>
+                    <nav aria-label="Page navigation example">
+                      <ul class="pagination justify-content-end">
+                        <li class="page-item">
+                          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                          <a class="page-link" href="#">Next</a>
+                        </li>
+                      </ul>
+                    </nav>
                   </div>
                 </div>
               </section>
@@ -1773,6 +1844,31 @@
 
 
 
+
+      <!-- homepage-bottom-newslater-section -->
+
+      <section class="homepage-bottom-newslater-section">
+        <div class="container ">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="newslater-body text-center">
+                <h4>Get Latest Update by <br>Subscribe Our Newslater</h4>
+                <div class="mb-4">
+                  <input type="text" class="form-control form-control-lg bubscribe-control rounded-0 px-5 py-3" placeholder="Enter your email">
+                </div>
+                <div class="pb-3">
+                  <button class="btn btn-light w-100 rounded-0 px-5 py-3" type="button">Subscribe</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        
+
+        </div>
+      </section>
+
+
+
       <!-- brand-company-section -->
 
       <section class="brand-company-section">
@@ -1917,7 +2013,7 @@
             <a href=""> BRANDS</a>
             <a href="">CASES</a>
             <a href=""> CABLES</a>
-            <a href=""> CABLES</a>
+            <a href=""> SHIRT</a>
           </div>
 
           <div class="footer-contact-details-body pt-2 ">
@@ -1981,7 +2077,7 @@
       <div class="row text-center">
         <div class="col-lg-4 col-md-6 my-2 col-12">
           <p>
-            © 2015 All rights reserved. Development by <a class="agency-copy" href="">Vijayyadav</a>
+            © 2024 All rights reserved. Development by <a class="agency-copy" href="">Vijay.Yadav</a>
           </p>
         </div>
         <div class="col-lg-4 mb-2 col-md-6 col-12">
@@ -1997,7 +2093,35 @@
         </div>
       </div>
     </div>
+    <div class="window-top-bottom-scroll">
+      <button class=" btn" onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    </div>
+
+
+
+
   </footer>
+
+
+  <script>
+    let mybutton = document.getElementById("myBtn");
+    window.onscroll = function () {
+      scrollFunction()
+    };
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        mybutton.style.display = "block";
+
+      } else {
+        mybutton.style.display = "none";
+      }
+    }
+    function topFunction() {
+      document.body.scrollTop = 0;
+      document.documentElement.scrollTop = 0;
+    }
+
+  </script>
 
   <!-- owl.carousel -->
   <script>
@@ -2045,6 +2169,9 @@
   </script>
 
 
+
+
+
   <!-- https://michalsnik.github.io/aos/ -->
   <script src="js/aos.js"></script>
 
@@ -2058,8 +2185,6 @@
   </script>
 
   <script>
-
-
     $('.hero__scroll').on('click', function (e) {
       $('html, body').animate({
         scrollTop: $(window).height()
