images path changes

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <img src="homepageimages/5092428.jpg" alt="">
             </div>
             <div class="item">
-              <img src="/homepageimages/8460965.jpg" alt="">
+              <img src="homepageimages/8460965.jpg" alt="">
             </div>
           </div>
         </div>
